# harmonypartition

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  re_install_script.txt  setup.py
env/: pyvenv.cfg
harmonypartition/: harmony_state.py  pt_musicutils.py  pt_naming_conventions.py  pt_utils.py
harmonypartition.egg-info/: PKG-INFO  SOURCES.txt
jup/: Cb_in_g_combo6251  Cb_in_g_step6251  Chapter_0_IntroShowcase.ipynb  Chapter_1a_Twelve_Pitches.ipynb  Chapter_1b_Twelve_Pitches-Again.ipynb  Chapter_1b_Twelve_Pitches_circular.ipynb  Chapter_2_Oct_Fifth_Entropy.ipynb  Chapter_2a_Oct_Fifth_Entropy-Copy1.ipynb  Chapter_2b_Fifths_as_Audible_Order.ipynb  Chapter_3_Keys_v_Patterns.ipynb  Chapter_3a_Keys_v_Patterns.ipynb  Chapter_3b_The_KP_List.ipynb  Chapter_4_Harmonic_Identity_Matrix.ipynb  Chapter_4a_Harmonic_Identity_Matrix.ipynb  Chapter_4b_Chord_Functions.ipynb  Chapter_4b_Finding Roots.ipynb  Chapter_4c_Chord_Functions.ipynb  Chapter_5_KPDVE_nav.ipynb  Chapter_6_vi_ii_V_I.ipynb  Chapter_7_Wohlfahrt.ipynb  Chapter_7b_Standards.ipynb  Chapter_8_HarmonyVoxel.ipynb  Untitled.ipynb  Untitled2.ipynb  analyzer_audio.ipynb  analyzer_midi.ipynb  blg_analyzer_audio.ipynb  blg_analyzer_midi.ipynb  blg_cleanprimes.ipynb  blg_colorpalette.ipynb  blg_fileprimes.ipynb  blg_graphing.ipynb  blg_powers_of_n.ipynb  blg_powersofthree.ipynb  blg_primes.ipynb  blg_primes_as_data.ipynb  blg_wavewriter.ipynb  ccmf_graphing.py  jupyter_pt_tools.py  midianalyzer.ipynb  (+18 more)
notation/: vi_ii_V_I.mid
src/: Chapter_3b_The_KP_List.ipynb  harmony_state.py  jupyter_pt_tools.py  (+16 more)
(+5 files in other folders)
