[tool.poetry]
name = "harmonypartition"
version = "0.1.0"
description = ""
authors = ["Tim Summers <timsummers@mac.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
